--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "accelerate>=1.8.1",
+    "gradio>=5.35.0",
     "torch>=2.7.1",
     "transformers>=4.53.1",
 ]
