--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.11"
 dependencies = [
     "accelerate>=1.8.1",
     "gradio>=5.35.0",
+    "streamlit>=1.46.1",
     "torch>=2.7.1",
     "transformers>=4.53.1",
 ]
